--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <title>Supermercado X-Online</title>
     </head>
     <body class="bg-black">
-        <script src="jss/java.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
