--- a/html/cart.html
+++ b/html/cart.html
@@ -3,36 +3,43 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Supermercado X-Online</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Supermercado X-Online</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 		<link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnrYU_2qi3Soeg9kPuWQDwhwsqlX8gR2o2m1oAgWO6DZH9PnX4zsZbYZsW7nOXyJ5lLww&usqp=CAU">
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/index.css">
+		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="../css/cart.css">
 	</head>
 	<body>
 		<header>
 			<nav>
-				<a href="./index.html">
+				<a href="../index.html">
 					<img src="https://cdn-icons-png.flaticon.com/512/3082/3082031.png" alt="Logo" id="logo">
 				</a>
 				<div>
 					<h1 class="fs-1 text-white">Bienvenido al Supermercado X-Online</h1>
 				</div>
 				<div>
-					<a href="html/cart.html" id="cart"><img src="https://www.adeshoras.com/Content/Iconos/CarritoBlanco.png" alt=""><span id="cuenta-carrito">0</span></a>
+					<a href="./cart.html" id="cart"><img src="https://www.adeshoras.com/Content/Iconos/CarritoBlanco.png" alt=""><span id="cuenta-carrito">0</span></a>
 				</div>
 			</nav>
 		</header>
 		<main>
-			<section id="productos-container">
+			<p id="carrito-vacio">El carrito está vacío, <a href="../index.html">elige algunos productos</a></p>
+			<section id="cart-container">
+			</section>
+			<section id="totales">
+				<p>Total unidades: <span id="cantidad">0</span></p>
+				<p>Total precio: $<span id="precio">0</span></p>
+				<button disabled>Comprar</button>
+				<button id="reiniciar">Reiniciar</button>
 			</section>
 		</main>
 		<footer>
 			<p>Derechos reservados por Supermercado X-Online</p>
 		</footer>
-		<script src="./js/mercaderias.js"></script>
-		<script src="./js/cartService.js" defer></script>
-		<script src="./js/index.js" defer></script>
+		<script src="../js/mercaderias.js"></script>
+		<script src="../js/cartService.js" defer></script>
+		<script src="../js/cart.js" defer></script>
 	</body>
 </html>
