--- a/html/cart.html
+++ b/html/cart.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Supermercado X-Online</title>
+		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 		<link rel="shortcut icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTnrYU_2qi3Soeg9kPuWQDwhwsqlX8gR2o2m1oAgWO6DZH9PnX4zsZbYZsW7nOXyJ5lLww&usqp=CAU">
 		<link rel="stylesheet" href="../css/style.css">
@@ -39,7 +40,7 @@
 			<p>Derechos reservados por Supermercado X-Online</p>
 		</footer>
 		<script src="../js/mercaderias.js"></script>
-		<script src="../js/cartService.js" defer></script>
-		<script src="../js/cart.js" defer></script>
+		<script src="../js/cartService.js"></script>
+		<script src="../js/cart.js"></script>
 	</body>
 </html>
