Ultima Entrega Final

--- a/html/cart.html
+++ b/html/cart.html
@@ -32,8 +32,8 @@
 			<section id="totales">
 				<p>Total unidades: <span id="cantidad">0</span></p>
 				<p>Total precio: $<span id="precio">0</span></p>
-				<button disabled>Comprar</button>
-				<button id="reiniciar">Reiniciar</button>
+				<button id="comprar" class="btn btn-dark">Comprar</button>
+				<button id="reiniciar" class="btn btn-dark">Reiniciar</button>
 			</section>
 		</main>
 		<footer>
