--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<main>
 			<section id="productos-container">
 			</section>
+			<button id="resetButton" class="btn btn-danger btn-floating">Reiniciar Usuario</button>
 		</main>
 		<footer>
 			<p>Derechos reservados por Supermercado X-Online</p>
